--- a/package.json
+++ b/package.json
@@ -12,10 +12,16 @@
   "license": "ISC",
   "dependencies": {
     "csv-parser": "^3.0.0",
+    "express": "^4.17.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.0",
     "ng": "0.0.0",
     "prompt-sync": "^4.2.0",
     "sequelize": "^6.6.5"
+  },
+  "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.24.2"
   }
 }
